Updates in docker
- Atualizações e configurações no docker
- Variáveis de ambiente
- Rules no laravel
- Regras no Controller
