# api-sys_produtos/app/Http/Controllers/CategoriaController.php
@@ -2,6 +2,8 @@
 
 namespace App\Http\Controllers;
 
+use App\Models\Categoria;
+use App\Rules\RuleRequired;
 use Illuminate\Http\Request;
 
 class CategoriaController extends Controller
@@ -22,5 +24,76 @@ class CategoriaController extends Controller
 
     public function show(){
         return "show categorias";
+    }
+
+    /**
+     * Categorias Controller
+     * @OA\Post(
+     *     path="/api/categoria/create",
+     *     summary="Create Categoria",
+     *     tags={"Categoria"},
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                     property="name",
+     *                     type="string"
+     *                 ),
+     *              )
+     *          )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK"
+     *     )
+     * ),
+     */
+
+    public function create(Request $request){
+        try {
+
+            $request->validate([
+                'name'             => [new RuleRequired],
+            ]);
+
+            $categoria = Categoria::create([
+                'name' => $request->name,
+            ]);
+
+            return response()->json([
+                "msg" => 'Categoria criada com sucesso!',
+                "categoria" => $categoria,
+            ], 200);
+        } catch (\Illuminate\Validation\ValidationException $e) {
+            return response()->json([
+                "erros" => $e->errors(),
+            ], 200);
+        }
+    }
+
+
+    public function update(Request $request){
+        try {
+
+            $request->validate([
+                'id'     => [new RuleRequired],
+                'name'   => [new RuleRequired],
+            ]);
+
+            $categoria = Categoria::where('id',$request->id)
+                                ->update([
+                                    'name' => $request->name,
+                                ]);
+
+            return response()->json([
+                "msg" => 'Categoria atualizada com sucesso!',
+                "categoria" => $categoria,
+            ], 200);
+        } catch (\Illuminate\Validation\ValidationException $e) {
+            return response()->json([
+                "erros" => $e->errors(),
+            ], 200);
+        }
     }
 }
