# api-sys_produtos/app/Models/Categoria.php
@@ -1,0 +1,20 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Categoria extends Model
+{
+    use HasFactory;
+
+    protected $table = 'categoria';
+    public $timestamps = true;
+
+    protected $fillable = [
+        'id',
+        'name',
+    ];
+
+}
